# mutsolver-data

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  build.rs
.devcontainer/: Dockerfile  devcontainer.json
data/: sutom-6A.json  sutom-6B.json  sutom-6C.json  sutom-6D.json  sutom-6E.json  sutom-6F.json  sutom-6G.json  sutom-6H.json  sutom-6I.json  sutom-6J.json  sutom-6L.json  sutom-6M.json  sutom-6N.json  sutom-6O.json  sutom-6P.json  sutom-6R.json  sutom-6S.json  sutom-6T.json  sutom-6U.json  sutom-6V.json  sutom-7A.json  sutom-7B.json  sutom-7C.json  sutom-7D.json  sutom-7E.json  sutom-7F.json  sutom-7G.json  sutom-7H.json  sutom-7I.json  sutom-7J.json  sutom-7L.json  sutom-7M.json  sutom-7N.json  sutom-7O.json  sutom-7P.json  sutom-7R.json  sutom-7S.json  sutom-7T.json  sutom-7U.json  sutom-7V.json  (+42 more)
src/: lib.rs  rules.rs
tests/: registry.rs
