[package]
name = "mutsolver-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.22"
lazy_static = "1.4.0"
mutsolver-core = { git = "https://github.com/ezlo-picori/mutsolver-core", branch = "main" }
regex = "1.5.5"
serde =  { version = "1.0.136", features = ["derive"] }

[build-dependencies]
bincode = "1.3.3"
flate2 = "1.0.22"
lazy_static = "1.4.0"
mutsolver-core = { git = "https://github.com/ezlo-picori/mutsolver-core", branch = "main" }
regex = "1.5.5"
serde =  { version = "1.0.136", features = ["derive"] }
